--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	button{
 	background-color: buttonface;
 	min-width: -webkit-fill-available;
-	}#txta{
+	}
+	#txta{
 	min-width: -webkit-fill-available;
 	}
 	</style>
@@ -21,7 +22,7 @@
 		flex-direction: column-reverse;
 		margin-top:0.87em;
 	"></textarea>
-	<button id="setupPatt" style="margin-top:0.87em;">Setup pattern-based (regex/plaintext) annotation window</button>
+	<button id="setupPatt" style="display:none;">Setup pattern-based (regex/plaintext) annotation window</button>
 	<script src="index.js"></script>
   </body>
 </html>
