--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	</style>
 	  <button id="markPage">Mark page</button>
 	  <button id="markPageSave" title="You will only be able to annotate the saved page">Mark page + save</button>
+	  <button id="markPageSaveText" title="You will only be able to annotate the saved page">Mark page + save text only</button>
 	<textarea id="txta" title="Enter unique selector of element within which the text will be marked" placeholder="Enter CSS selector here: " style="
 		display: flex;
 		min-height: min-content;
