--- a/pdf_viewer_STORE_ELSEWHERE!/viewer.html
+++ b/pdf_viewer_STORE_ELSEWHERE!/viewer.html
@@ -3,14 +3,14 @@
     <title>PDF.js viewer</title>
     <script src="pdf.js"></script>
     <link rel="stylesheet" href="viewer.css">
-    
-    <style>mark.no_hl[indexnumber]{background-color:unset !important; color:unset !important;}</style>
+
     <style>
       html, body {
         height: 100%;
         margin: 0;
         padding: 0;
       }
+      mark.no_hl[indexnumber]{background-color:unset !important; color:unset !important;} 
     </style>
   </head>
 
