--- a/pdf_viewer_STORE_ELSEWHERE!/viewer.html
+++ b/pdf_viewer_STORE_ELSEWHERE!/viewer.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>PDF.js viewer</title>
+    <title>PDF.js viewer for textAnnotate</title>
     <script src="pdf.js"></script>
     <link rel="stylesheet" href="viewer.css">
     
