--- a/pdf_viewer_STORE_ELSEWHERE!/viewer.html
+++ b/pdf_viewer_STORE_ELSEWHERE!/viewer.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>PDF.js viewer for textAnnotate</title>
+    <meta charset="utf-8">
     <script src="pdf.js"></script>
     <link rel="stylesheet" href="viewer.css">
     
@@ -228,7 +229,7 @@
       <div id="viewerContainer" tabindex="0">
         <div id="viewer" class="pdfViewer"></div>
       </div>
-
+      <div id="allText" style="display: none !important;"></div>
       <div id="errorWrapper" hidden='true'>
         <div id="errorMessageLeft">
           <span id="errorMessage"></span>
