--- a/pdf_viewer_STORE_ELSEWHERE!/viewer.html
+++ b/pdf_viewer_STORE_ELSEWHERE!/viewer.html
@@ -229,7 +229,7 @@
       <div id="viewerContainer" tabindex="0">
         <div id="viewer" class="pdfViewer"></div>
       </div>
-      <div id="allText" style="display: none !important;"></div>
+      <div id="textAnnotate_markText" style="display: none !important;"></div>
       <div id="errorWrapper" hidden='true'>
         <div id="errorMessageLeft">
           <span id="errorMessage"></span>
